# EPL-monte-carlo

./: .gitignore  CMakeLists.txt  README.md  results_2025_26.csv
bench/: benchmark.cpp
cli/: main.cpp
data/: fixtures_2025_26.csv
include/simulator/: accumulator.hpp  csv.hpp  engine.hpp  season.hpp  types.hpp  xoshiro.hpp
src/: csv.cpp  engine.cpp  season.cpp
tests/: test_main.cpp
